# cargo_crev_web

./: .auto_version_from_date.json  .gitignore  Cargo.toml  LICENSE  Makefile.toml  README.md  cache8.txt  crev_query.tour.md  lmakeversionfromdate.json  markdown.css  rustfmt.toml  sub_templates.tour.md  temp8.txt  todo.md  tour_extended.json
.tours/: crev_query.tour  sub_templates.tour
automation_tasks_rs/: Cargo.toml
automation_tasks_rs/src/: main.rs
docs/: aliases.js  crates.js  help.html  index.html  search-index.js  settings.html  source-files.js
docs/cargo_crev_web/: all.html  enum.HtmlOrSvg.html  enum.Node.html  fn.author_name_from_url.html  fn.conditional_usize.html  fn.decode_html_script_node.html  fn.encode_html_script_node.html  fn.find_from.html  fn.find_pos_after_delimiter.html  fn.find_pos_before_delimiter.html  fn.find_range_between_delimiters.html  fn.main.html  fn.main_code.html  fn.ns_elapsed.html  fn.ns_print.html  fn.ns_start.html  fn.parse_semver.html  fn.render_sub_template_match_else.html  fn.replace_with_nodes_match_else.html  fn.replace_with_string_match_else.html  fn.replace_with_url_match_else.html  fn.retain_next_node_or_attribute_match_else.html  fn.reviewer_name_from_url.html  fn.to_string_zero_to_empty.html  fn.traverse_dir_with_exclude_dir.html  fn.url_s_zero_to_empty.html  fn.version_for_sorting.html  index.html  macro.s.html  macro.url_u!.html  macro.url_u.html  sidebar-items.js  struct.Attribute.html  struct.ElementNode.html  struct.SubTemplate.html  struct.UrlPartUtf8Decoded.html  struct.UrlUtf8EncodedString.html  trait.HtmlServerTemplateRender.html  type.ArcMutStateGlobal.html
docs/doc/: search-index.js  source-files.js
other/: other.md
sample_data/: cargo_crev_id_query_all.txt  cargo_crev_id_query_trusted.txt  github_api_content.json  github_api_forked.json  github_api_repo.json  review_1.yaml  url_to_blocklist.txt
src/: all_summary_mod.rs  author_review_mod.rs  author_reviews_mod.rs  authors_mod.rs  badge_mod.rs  cargo_registry_index_mod.rs  crate_proofs_mod.rs  crate_reviews_mod.rs  crate_version_summary_mod.rs  crates_mod.rs  crev_query_mod.rs  crev_query_templating_mod.rs  daily_visitors_mod.rs  data_file_scan_mod.rs  duration_mod.rs  durex_mod.rs  encode_decode_mod.rs  html_server_template_mod.rs  html_template_impl_mod.rs  html_template_mod.rs  info_group_by_author_mod.rs  info_group_by_crate_mod.rs  info_mod.rs  issue_mod.rs  last_reviews_mod.rs  macros_mod.rs  main.rs  main_code_mod.rs  people_of_rust_mod.rs  proof_html_template_impl_mod.rs  proof_index_mod.rs  proof_index_summary_mod.rs  proof_mod.rs  reserved_folder_mod.rs  review_index_mod.rs  review_index_summary_mod.rs  review_mod.rs  review_new_mod.rs  reviewer_index_mod.rs  reviewer_reviews_mod.rs  (+9 more)
var_www_crev.dev/: README.md  index.html
var_www_scripts/: cargo_crev_web_fetch_reindex.sh  cargo_crev_web_publish.sh
var_www_scripts/cargo_crev_web/: cargo_crev_web_fetch_reindex.sh  cargo_crev_web_publish.sh  read_me_make_script_executable.txt
var_www_web.crev.dev/: README.md  robots.txt
var_www_web.crev.dev/css/: rust-reviews.css
web_server_folder/: blacklist_author_url.json  blocklisted_repos.json  github_search.json
web_server_folder/templates/: author_reviews_template.html  authors_template.html  badge_template.html  crate_reviews_template.html  crates_template.html  index_template.html  info_group_by_author_template.html  info_group_by_crate_template.html  last_reviews_template.html  new_review_template.html  people_of_rust.html  people_of_rust_template.html  reserved_folder_template.html  review_index_summary_template.html  review_new_full_template.html  review_new_template.html  reviewer_reviews_template.html  reviewers_template.html  your_personal_reviews_template.html
web_server_folder/web_content_folder/: index.html
webfolder/: proof_template.html  template.html  template_test.html  template_without_body.html
webfolder/cargo_crev_web_root_folder/: index.html
webfolder/crev/: all_summary_template copy.html  index.html  proof_template.html  template_test.html  template_without_body.html
(+707 files in other folders)
