[package]
name = "cargo_crev_web"
#no need for semver if it is not a library
version = "2020.525.906" 
description = "web server to query reviews from cargo-crev"
authors = ["Luciano Bestia"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/lucianobestia/cargo_crev_web/"
categories = ["web-programming"]
keywords = ["warp","crev","cargo-crev"]
publish = false

[dependencies]
reader_for_microxml = "1.0.4"

futures = "0.3.5"
log = "0.4.8"
env_logger = "0.7.1"
warp="0.2.2"
regex="1.3.7"
tokio = { version = "0.2.21", features = ["macros"] }
# cmd line input parameters
clap ="2.33.1"
# colorful output to screen
ansi_term = "0.12.1"
serde = "1.0.110"
serde_derive ="1.0.110"
serde_yaml = "0.8.12"
serde_json = "1.0"
unwrap = "1.2.1"
lazy_static="1.4.0"
glob="0.3.0"
dirs="2.0.2"
strum="0.18.0"
strum_macros = "0.18.0"
chrono="0.4.11"
itertools = "0.9.0"
urlencoding = "1.0.0"
surf = "1.0.3"