[package]
name = "cargo_crev_web"
#no need for semver if it is not a library
version = "2023.608.1125"
description = "web server to query reviews from cargo-crev"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/bestia-dev/cargo_crev_web/"
categories = ["web-programming"]
keywords = ["warp","crev","cargo-crev"]
publish = false

[dependencies]
reader_for_microxml = "2.0.1"
#reader_for_microxml = { path = "../reader_for_microxml" }

futures = "0.3.5"
log = "0.4.8"
env_logger = "0.10.0"
warp="0.3.5"
regex="1.3.7"
tokio = { version = "1.28.2", features = ["macros"] }
# cmd line input parameters
clap ="4.3.2"
# colorful output to screen
ansi_term = "0.12.1"
serde = "1.0.110"
serde_derive ="1.0.110"
serde_yaml = "0.9.21"
serde_json = "1.0"
unwrap = "1.2.1"
lazy_static="1.4.0"
glob="0.3.1"
dirs="5.0.1"
strum="0.24.1"
strum_macros = "0.24.3"
chrono="0.4.11"
itertools = "0.10.5"
surf = "2.3.2"
percent-encoding = "2.1.0"
anyhow = "1.0.31"
comrak = "0.18.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2  = "1.0.22"
tar ="0.4.37"