
[package]
name = "automation_tasks_rs"
version = "0.1.1"
authors = ["Luciano Bestia <luciano.bestia@gmail.com>"]
edition = "2018"
description = "cargo auto - automation tasks written in Rust language"
publish = false

[dependencies]
cargo_auto_lib = "0.7.22"
# cargo_auto_lib ={path="../../cargo_auto_lib"}

unwrap="1.2.1"
base64 = "0.13.0"