
[package]
name = "automation_tasks_rs"
version = "0.1.1"
authors = ["bestia.dev"]
homepage = "https://bestia.dev"
edition = "2021"
description = "cargo auto - automation tasks written in Rust language"
publish = false

[dependencies]
cargo_auto_lib = "0.8.60"
# cargo_auto_lib ={path="../../cargo_auto_lib"}

unwrap="1.2.1"
base64 = "0.21.2"